--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,20 @@ dependencies:
   location: ^4.2.0
   intl: ^0.16.1
   flutter_dotenv: ^5.0.2
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
+  flutter_native_splash: ^1.3.1
   flutter_test:
     sdk: flutter
 
+flutter_native_splash:
+  color: "#23898d"
+  image: images/icon.png
+  android: true
+  ios: true
 
 flutter:
-
   uses-material-design: true
   assets:
     - images/
