--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   location: ^4.2.0
   intl: ^0.16.1
   flutter_dotenv: ^5.0.2
-  animated_text_kit: ^4.2.1
+  flutter_typeahead: ^3.2.1
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
