--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   intl: ^0.16.1
   flutter_dotenv: ^5.0.2
   flutter_typeahead: ^3.2.1
+  flip_card: ^0.6.0
+  line_icons: ^2.0.0
+  fab_circular_menu: ^1.0.2
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
@@ -23,7 +26,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_native_splash:
-  color: "#23898d"
+  color: "#14213D"
   image: images/icon.png
   android: true
   ios: true
