--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flip_card: ^0.6.0
   line_icons: ^2.0.0
   fab_circular_menu: ^1.0.2
+  responsive_builder: ^0.4.1
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
